# send-receive

./: .gitignore  README.md  docker-compose.yaml  initiate_containers.sh
receiver/: Dockerfile  pyproject.toml  setup.py
receiver.service/: Dockerfile  pyproject.toml
receiver.service/receiver/: receive.py
scripts/: build_scripts.sh  init_containers.sh
sender/: Dockerfile
sender.service/: Dockerfile  pyproject.toml
sender.service/sender/: send.py
