[tool.poetry]
name = "receiver"
version = "0.1.0"
description = "subscribe to rabbitmq channel"
authors = ["Asaf Cohen <https://github.com/safhac>"]
packages = [
    { include = "receiver" },
]

[tool.poetry.dependencies]
python = "^3.9"
pika = "^1.2.0"

[tool.poetry.dev-dependencies]
pika = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

